data/derived/fa15/progs/unify/prog0950.ml.out
Characters 64-69:
  if (k,x) then x
     ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool
